--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
-.class
-.classpath
-.project
-/bin/
-/main/**/bin/
-
 ### Eclipse ###
 .metadata
 bin/
@@ -98,5 +92,9 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# etc
+.classpath
+.project
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
