--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
+META-INF
+Servers
+.classpath
+.project
+
 ### Eclipse ###
 .metadata
 bin/
@@ -92,9 +97,5 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
-# etc
-.classpath
-.project
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
